[package]
name = "word_replace"
version = "0.0.3"
authors = ["Rinthel Kwon<rinthel@gmail.com>"]

exclude = ["example"]
description = "word replacement tool for a text file with toml-based dictionary"
repository = "https://github.com/rinthel/word_replace.git"
readme = "README.md"
keywords = ["word", "replace", "dictionary"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
clap = "2.26"
toml = "0.4"
regex = "0.2"